# Refferal-App

./: Dockerfile  Readme.md  app.py.db  docker-compose.yaml  pyproject.toml  requirements.txt
app/: config.py  dependencies.py  main.py  utils.py
app/database/: database.py
app/models/: models.py  queries.py  schemas.py
app/routers/: account.py  refferal.py
tests/: conftest.py  test_reff.py
